2004-07-21  Stefan Jahn  <stefan@lkcc.org>

	* spsolver.cpp: Running 'initSP()' on every circuit before
	simulating.  Using 'matvec::createMatrixString()' for creating
	the vector names.

	* scan_netlist.l: Allowing "{File}" token in order to pass
	file references to component properties.

	* matvec.cpp: Two new functions: createMatrixString() and
	isMatrixVector().  Moved from 'equation.cpp'.

	* input.cpp: Changing the number of ports when creating a 
	S-parameter file component.

	* equation.cpp:  Using 'matvec::createMatrixString()'
	for creating the vector names and 'matvec::isMatrixVector()'
	to detect matrix vectors.

	* dataset.cpp: New functions returning the number of dataset
	vectors (variables and dependencies).

	* circuit.cpp: Size (number of ports) can now be changed by
	calling 'setSize()'.

	* check_touchstone.cpp: Using 'matvec::createMatrixString()'
	for creating the vector names.

	* check_netlist.cpp (definition_available): Added 'SPfile' as
	new available component.
	Checking range for both required *and* optional properties.

2004-07-18  Stefan Jahn  <stefan@lkcc.org>

	* matrix.cpp: Implemented stos() functionality converting
	reference impedances of scattering parameters.

	* check_touchstone.cpp: Implemented re-normalizing the impedance
	within touchstone files.

2004-07-16  Stefan Jahn  <stefan@lkcc.org>

	* scan_netlist.l: Added additional tokens for subcircuit
	definitions.

	* parse_netlist.y: Scribbled down the grammar for subcircuit
	definitions.  Also saving the line number for component lines.

	* check_netlist.cpp: Added the functionality used to provide
	subcircuits in netlists.  This includes checking the subcircuits
	itself, expanding them into the global netlist and checking
	their context validity.
	Also giving the offending line number for checker errors when
	possible.

2004-07-12  Stefan Jahn  <stefan@lkcc.org>

	* spsolver.cpp: Avoiding singularity when two full reflective
	ports of two different circuits are connected.